[project]
name = "amplifier-module-provider-mock"
version = "1.0.0"
description = "Reference provider module - Mock provider for Amplifier testing and development"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
]

[project.entry-points."amplifier.modules"]
provider-mock = "amplifier_module_provider_mock:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_mock",
]

[tool.hatch.metadata]
allow-direct-references = true
